# Vextryn

./: .env  CMakeLists.txt  Makefile  README.md  agent15_test.sh  b1.txt  b2.txt  b3.txt  b4.txt  font_gen.py  patch_browser.py  update_browser.py
.agent-evidence/baseline/: compositor-inventory.txt  vxair_vxcomp.cpp
.agent-evidence/boot-diagnosis/: boot-a-20s.ppm  boot-a-command.txt  boot-b-command.txt
.agent-evidence/boot-repair/: grub-config-diff.txt  grub.cfg.before-initrd-fix
.agent-evidence/recovery/: current-run-dir.txt  current-run-id.txt  qemu-command-20260720-204441.txt  qmp-response-20260720-204441.txt
.agent-evidence/storage-phase/: block-vfs-audit.md  files-app-audit.md  host-share-audit.md  integration-log.md  settings-audit.md  ui-design-audit.md
.github/workflows/: ci.yml
apps/vxcalc/: vxcalc.cpp
apps/vxclock/: vxclock.cpp
apps/vxsysmon/: vxsysmon.cpp
apps/vxweb/: vxweb.cpp
boot/: early_init.c  long_mode_entry.S  multiboot2_stub.S  uefi_bootloader.c  vxair_boot_info.h
boot/efi/: efi.h
build-out/: CMakeCache.txt  Makefile  cmake_install.cmake
build_out/: CMakeCache.txt  Makefile  cmake_install.cmake
docs/: BUILD_SYSTEM.md  RELEASE_NOTES.md  architecture.md  boot_log.txt  building.md  hacking.md  phase3_report.md  phase5_report.md  phase5_status.md  phase6_report.md  phase6_status.md  real_hardware.md
drivers/audio/: vxair_pcspk.c  vxair_pcspk.h
drivers/bus/: bus_pci.c  bus_pci.h  bus_xhci.c  bus_xhci.h
drivers/gpu/: vxair_gop.c  vxair_gop.h  vxair_gpu_fb.c  vxair_gpu_fb.h
drivers/input/: vxair_input.c  vxair_input.h
drivers/storage/: ahci.c  ahci.h  nvme.c  nvme.h
drivers/wireless/: ax200.c  ax200.h  rtl8852.c  rtl8852.h
fs/: ext2.c  ext2.h  fat32.c  fat32.h  ramdisk.c  ramdisk.h  vfs.c  vfs.h  vxairfs.c  vxairfs.h
gui/compositor/: app_icons.h  ata_storage.hpp  font8x8.h  times_font.h  (+2 more)
scripts/: agent1.sh  agent2.sh  agent3_7_8.sh  agent4_6.sh  agent5.sh  agent7_tester.sh  agent9.sh  build.py  build_uefi.sh  flash_usb.sh  mkiso.sh  phase3_orchestrator.py  run_qemu.sh  run_qemu_gui.sh  run_simple.sh  run_vbox.sh  run_vnc.sh  serve_repo.sh
toolchain/: x86_64-elf.cmake
(+127 files in other folders)
